fixed the jump in image

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ a {
 }
 
 .fade-in {
-  animation: fadeIn 5s;
+  animation: fadeIn 3s;
   text-align: center;
 }
 
